--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,68 @@
+html {
+  font-family: 'Lato', 'Lucida Grande', 'Lucida Sans Unicode', Tahoma, Sans-Serif;
+}
+
 body {
   color: #fff;
-  /* text-align: center; */
+  background-color: #6565B2;
+  text-align: center;
+  margin: 0;
+}
+
+#description {
+  font-weight: 100;
+  width: 80%;
+  margin: 1em auto;
 }
 
 .form {
+  text-align: left;  /*undo what was done in the body*/
   background-color: #2B2B4A;
   min-width: 500px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  /*   text-align: center; */
+  font-size: 1.2rem;
 }
 
 .form__content{
-  padding:45px;
+  padding:30px 40px 60px;
+}
+
+input[type=text], input[type=email],input[type=number], select {
+  width: 100%;
+  height: 36px;
+  border-radius: 7px;
+}
+
+textarea {
+  width: 100%;
+}
+
+#submit {
+  width: 100%;
+  height: 46px;
+  background-color: #37AF65;
+  color: #fff;
+  font-size: 1.125rem;
+}
+
+label {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+div.recommendation-likelihood > label, .improvement-areas label {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.smaller-text {
+  font-size: 0.9rem;
+}
+
+#additional-comments {
+  font-family: 'Lato', 'Lucida Grande', 'Lucida Sans Unicode', Tahoma, Sans-Serif;
+  font-size: 1rem;
 }
